--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -67,6 +67,8 @@
     <script src="/assets/demo/demo.js"></script>
     <script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
     <script src="/assets/js/docs.min.js"></script>
+    <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
     <script src="/assets/js/markdown.js"></script>
     <script src="/assets/js/toc.js"></script>
+
 </head>
