[U] 添加 format-href.jekyll

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -70,5 +70,5 @@
     <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
     <script src="/assets/js/markdown.js"></script>
     <script src="/assets/js/toc.js"></script>
-
+    {% include js/format-href.jekyll %}
 </head>
