--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -23,7 +23,7 @@
                             <div class="row">
                                 <div class="col-lg-8 col-sm-12 offset-lg-2 offset-sm-0">
                                     <a href="#" id="{{ page.title | downcase | replace: ' ', '-'}}"><h1>{{ page.title
-                                        }}</h1></a>
+                                        }}——{{ page.subtitle }}</h1></a>
                                     <p class="category">{{ page.description }}</p>
                                 </div>
                             </div>
