--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>{{ page.title }}</title>
+    <link href="/favicon.ico" rel="shortcut icon">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
           name='viewport'/>
     <!-- Extra details for Live View on GitHub Pages -->
@@ -35,6 +36,7 @@
     <script src="/assets/js/plugins/sweetalert2.js"></script>
     <!-- Forms Validations Plugin -->
     <script src="/assets/js/plugins/jquery.validate.min.js"></script>
+    <script src="/assets/js/plugins/jquery.cookie.min.js"></script>
     <!-- Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
     <script src="/assets/js/plugins/jquery.bootstrap-wizard.js"></script>
     <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
