--- a/docs/_includes/sidebar/sidebar.html
+++ b/docs/_includes/sidebar/sidebar.html
@@ -1,4 +1,4 @@
-<div :class="sidebar-mini" :data-color="color" class="sidebar" data-background-color="black"
+<div class="sidebar" data-background-color="black" data-color="green"
      data-image="/assets/img/sidebar-1.jpg" id="sidebar">
     <!--
       Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
