--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -71,5 +71,5 @@
     <script src="/assets/js/docs.min.js"></script>
     <script src="/assets/js/markdown.js"></script>
     <script src="/assets/js/toc.js"></script>
-    {% include js/format-href.jekyll %}
+    {% include jekyll/format-href.jekyll %}
 </head>
