[U] datasource 添加 primary 选项，默认为 false

--- a/docs/assets/css/markdown.css
+++ b/docs/assets/css/markdown.css
@@ -165,10 +165,10 @@
     box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.1), 0 -1px 0 rgba(0, 0, 0, 0.5);
 }
 
-.markdown code {
-    border: 1px solid;
-    padding: 4px;
-    background-color: beige;
-    border-radius: 5px;
-    margin: 5px;
-}
+/*.markdown p code.highlighter-rouge {*/
+/*    border: 1px solid;*/
+/*    padding: 4px;*/
+/*    background-color: beige;*/
+/*    border-radius: 5px;*/
+/*    margin: 5px;*/
+/*}*/
