--- a/docs/assets/css/markdown.css
+++ b/docs/assets/css/markdown.css
@@ -165,6 +165,10 @@
     box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.1), 0 -1px 0 rgba(0, 0, 0, 0.5);
 }
 
+/*code, pre {*/
+/*    font-family: Cascadia Code, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;*/
+/*}*/
+
 /*.markdown p code.highlighter-rouge {*/
 /*    border: 1px solid;*/
 /*    padding: 4px;*/
