--- a/docs/assets/css/markdown.css
+++ b/docs/assets/css/markdown.css
@@ -1,6 +1,11 @@
 /**
  * Markdown Style
  */
+
+body {
+    background-color: #073642 !important;
+}
+
 .float-block {
     position: fixed;
     right: 0px;
