[U] SpringFactory support package element

--- a/final-spring/final-spring-ui/src/main/resources/templates/index.html
+++ b/final-spring/final-spring-ui/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Redis Value</title>
+    <title>Title</title>
 </head>
 <body>
-<img src="/sidebar-1.jpg">
+    Hello World! rewrwe asdfasd
 </body>
 </html>
