--- a/docs/assets/css/markdown.css
+++ b/docs/assets/css/markdown.css
@@ -27,6 +27,11 @@ body {
     font-family: Roboto, Helvetica, Arial, sans-serif;;
 }
 
+.markdown h1 p {
+    margin: 0;
+    padding: 0;
+}
+
 .markdown p {
     font-size: 1em;
     font-family: Roboto, Helvetica, Arial, sans-serif;;
@@ -156,7 +161,8 @@ body {
 }
 
 .section {
-    padding: 70px 0;
+    /*padding: 70px 0;*/
+    margin-top: -60px;
 }
 
 .markdown div.highlight {
@@ -181,3 +187,10 @@ body {
 /*    border-radius: 5px;*/
 /*    margin: 5px;*/
 /*}*/
+
+
+.post-title {
+    margin-top: 40px !important;
+    font-size: 32px;
+    border-bottom: 1px solid #FFF;
+}
