--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -14,7 +14,7 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="card" style="margin-top: 80px">
-                    <div class="card-header card-header-primary " style="margin-top: -80px">
+                    <div class="card-header card-header-success " style="margin-top: -80px">
                         <div class="row">
                             <div class="col-lg-8 col-sm-12 offset-lg-2 offset-sm-0">
                                 {% assign title = page.title %}
