--- a/docs/_includes/sidebar/sidebar-menu.html
+++ b/docs/_includes/sidebar/sidebar-menu.html
@@ -15,7 +15,8 @@
         <div :class="page.menus[0] == menu1.id ? 'show' : ''" :id="'menu1' + menu1.id" class="collapse"
              v-if="menu1.menus">
             <ul class="nav">
-                <li :class="page.menus[1] == menu2.id ? 'active' : ''" class="nav-item " v-for="menu2 in menu1.menus">
+                <li :class="page.menus[0] == menu1.id && page.menus[1] == menu2.id ? 'active' : ''" class="nav-item "
+                    v-for="menu2 in menu1.menus">
                     <a :href="menu2.link" class="nav-link" v-if="menu2.menus == null">
                         <span class="sidebar-mini" v-html="menu2.mini"> P </span>
                         <span class="sidebar-normal" v-html="menu2.name"> Pricing </span>
@@ -28,7 +29,8 @@
                     <div :class="page.menus[1] == menu2.id ? 'show' : ''" :id="'menu2' + menu2.id" class="collapse"
                          v-if="menu2.menus">
                         <ul class="nav">
-                            <li :class="page.menus[2] == menu3.id ? 'active' : ''" class="nav-item"
+                            <li :class="page.menus[0] == menu1.id && page.menus[1] == menu2.id && page.menus[2] == menu3.id ? 'active' : ''"
+                                class="nav-item"
                                 v-for="menu3 in menu2.menus">
                                 <a :href="menu3.link" class="nav-link">
                                     <span class="sidebar-mini" v-html="menu3.mini"> E </span>
