--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -30,26 +30,27 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card-body">
+                        <div class="container-fluid content markdown">
+                            <div class="row flex-md-nowrap">
+                                <div class="d-none d-lg-block col-lg-2 sticky-top">
+                                </div>
+                                <main class="col-lg-8 col-sm-12 offset-sm-0" role="main">
+                                    <article class="post-content">
+                                        {{ content }}
+                                    </article>
+                                </main>
 
-                    <div class="container-fluid content markdown">
+                                <div class="d-none d-lg-block col-lg-2 sticky-top flex-order-2">
+                                    <div class="toc" id="toc">
 
-                        <div class="row flex-md-nowrap">
-                            <div class="d-none d-lg-block col-lg-2 sticky-top">
-                            </div>
-                            <main class="col-lg-8 col-sm-12 offset-sm-0" role="main">
-                                <article class="post-content">
-                                    {{ content }}
-                                </article>
-                            </main>
-
-                            <div class="d-none d-lg-block col-lg-2 sticky-top flex-order-2">
-                                <div class="toc" id="toc">
-
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
