[U] update code style

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -21,6 +21,7 @@
     <link href="/assets/css/docs.min.css" rel="stylesheet"/>
     <link href="/assets/css/post.css" rel="stylesheet"/>
     <link href="/assets/css/markdown.css" rel="stylesheet"/>
+    <link href="/assets/css/base16.solarized.dark.css" rel="stylesheet"/>
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <!--<link href="/assets/demo/demo.css" rel="stylesheet" />-->
 
