--- a/final-coding/final-coding-spring/src/main/resources/template/spring/spring.factories.vm
+++ b/final-coding/final-coding-spring/src/main/resources/template/spring/spring.factories.vm
@@ -2,8 +2,8 @@
     #set($key = $entry.key)
     #set($list = $entry.value)
     #if($list)
-    # ${key.simpleName}
-    ${key.qualifiedName}=\
+    # ${key}
+        ${key}=\
         #foreach($!{item} in $!{list})
             #if($foreach.hasNext)
                 ${item},\
